Q1 change from tsx to ts Q2 add call api - add tailwind - add zod for runtime validation in calling api data - add basic UI

--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -10,12 +10,14 @@
     "isolatedModules": true,
     "moduleDetection": "force",
     "noEmit": true,
+    "jsx": "react-jsx",
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
-    "noUncheckedSideEffectImports": true
+    "noUncheckedSideEffectImports": true,
+    "types": ["node"]
   },
-  "include": ["vite.config.ts"]
+  "include": ["vite.config.ts", "Q1/**/*"]
 }
 
